--- a/application/views/internship/details.html
+++ b/application/views/internship/details.html
@@ -1,4 +1,4 @@
-{include internship/resume_uploader.html}
+{include internship/quick_apply.html}
 <section class="container">
     <div class="row">
         <div class="col-xs-12 col-md-9 col-md-offset-1">
@@ -52,10 +52,8 @@
                             {/else}
                         {/if}
                         {else}
-                            <div class="col-md-10 text-center">
-                                <button data-toggle="modal" data-target="#resume_uploader" class="btn btn-info"><i class="fa fa-check-circle fa-lg"></i>  | Quick Apply</button>
-                                <button onclick=studentLogin("linkedin") class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Apply with Linkedin</button>
-                                <button onclick=studentLogin("google") class="btn btn-danger"><i class="fa fa-google fa-lg"></i>  | Apply with Google+</button>
+                            <div class="col-md-10">
+                                <button data-toggle="modal" data-target="#resume_uploader" class="btn btn-info pull-right"><i class="fa fa-check-circle fa-lg"></i>  | Quick Apply</button>
                             </div>
                         {/else}
                     </div>
