--- a/application/views/home/index.html
+++ b/application/views/home/index.html
@@ -64,11 +64,6 @@
                         <i class="fa fa-search"></i> Advanced Search
                     </div>
                     <form id="search_opportunities" class="panel-body">
-                        <!--<div class="form-group">
-                            <label>Search Term</label>
-                            <input type="search" name="query" class="form-control" placeholder="What are you looking for?" value="" autocomplete="off">
-                            <small class="help-block"></small>
-                        </div>-->
                         <div class="form-group">
                             <label>Location</label>
                             <select data-placeholder="Select Place" name="location" class="form-control chosen">
@@ -87,6 +82,16 @@
                     <div class="list-group">
                         <a href="/home?location=delhi" class="list-group-item">Internship in Delhi</a>
                         <a href="/home?location=mumbai" class="list-group-item">Internship in Mumbai</a>
+                    </div>
+                </div>
+                
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <i class="fa fa-task"></i> Sponsored
+                    </div>
+                    
+                    <div class="list-group" id="sponsored">
+
                     </div>
                 </div>
 
