--- a/application/views/layouts/navigation/admin.html
+++ b/application/views/layouts/navigation/admin.html
@@ -41,18 +41,19 @@
             <li>
                 <a href="#"><i class="fa fa-newspaper-o fa-fw"></i> NewsLetter<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
-                    <li><a href="/admin/newsletterCreate">Create</a></li>
-                    <li><a href="/admin/newsletterManage">Manage</a></li>
+                    <li><a href="/marketing/newsletterCreate">Create</a></li>
+                    <li><a href="/marketing/newsletterManage">Manage</a></li>
                 </ul>
             </li>
             <li>
                 <a href="#"><i class="fa fa-support fa-fw"></i> CRM<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
-                    <li><a href="/admin/crmTemplate">Template</a></li>
-                    <li><a href="/admin/crmLead">Leads</a></li>
-                    <li><a href="/admin/crmManage">Manage</a></li>
+                    <li><a href="/marketing/crmTemplate">Template</a></li>
+                    <li><a href="/marketing/crmLead">Leads</a></li>
+                    <li><a href="/marketing/crmManage">Manage</a></li>
                 </ul>
             </li>
+            <li><a href="/admin/sponsored"><i class="fa fa-bullhorn fa-fw"></i> Sponsored</a></li>
         </ul>
     </div>
 </nav>
