--- a/application/views/marketing/crmTemplate.html
+++ b/application/views/marketing/crmTemplate.html
@@ -7,7 +7,7 @@
             CRM Template Saved <strong>Successfully!</strong>
         </div>
         {/if}
-        <form class="row" method="post" action="/admin/crmTemplate">
+        <form class="row" method="post" action="">
             <div class="form-group">
                 <label>Title</label>
                 <input type="text" name="title" class="form-control" required="" placeholder="Unique CRM Title">
