--- a/application/views/layouts/navigation/admin.html
+++ b/application/views/layouts/navigation/admin.html
@@ -53,7 +53,7 @@
                     <li><a href="/marketing/crmManage">Manage</a></li>
                 </ul>
             </li>
-            <li><a href="/admin/sponsored"><i class="fa fa-bullhorn fa-fw"></i> Sponsored</a></li>
+            <li><a href="/marketing/sponsored"><i class="fa fa-bullhorn fa-fw"></i> Sponsored</a></li>
         </ul>
     </div>
 </nav>
