Removed Placement papers

--- a/application/views/organizations/saveExperience.html
+++ b/application/views/organizations/saveExperience.html
@@ -3,7 +3,7 @@
         <h1 class="page-header text-center">Share Experience</h1>
         <ol class="breadcrumb">
             <li><a href="/home">Home</a></li>
-            <li><a href="/placement-papers">Companies</a></li>
+            <li><a href="/organizations">Companies</a></li>
             <li class="active">Add Experience</li>
         </ol>
         {if($success == TRUE)}
