Removed Post internship Link

--- a/application/views/users/emails/employerRegister.html
+++ b/application/views/users/emails/employerRegister.html
@@ -7,7 +7,7 @@ We are unique from other internship portals we focus on new features as adding t
 <br>
 <b></b>
 <ul>
-    <li><a href="http://swiftintern.com/employer/postinternship">Post your internships for free</a></li>
+    <li><a href="http://swiftintern.com/internship/post">Post your internships for free</a></li>
     <li>Visit our <a href="http://swiftintern.com/employer/resources">Employer Resources</a> section for advice on setting up and managing your internship program.</li>
 </ul>
 <br>
