--- a/application/views/resumes/index.html
+++ b/application/views/resumes/index.html
@@ -8,11 +8,12 @@
         </h1>
         <p>
             Create the perfect resume in minutes and save in PDF or Word<br><br>
-            {if ($li->hasAccessToken())}
+            {if ($li->hasAccessToken()) || $user}
             <a href="/resumes/success" class="btn btn-primary btn-lg"><i class="fa fa-check fa-lg"></i> | Continue</a>
             {/if}
             {else}
-            <a href="{echo $url}" class="btn btn-primary btn-lg"><i class="fa fa-linkedin fa-lg"></i> | Continue with Linkedin</a>
+            <button onclick=studentLogin("linkedin") class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Continue with Linkedin</button>
+            <button onclick=studentLogin("google") class="btn btn-danger"><i class="fa fa-google fa-lg"></i>  | Continue with Google+</button>
             {/else}
         </p>
     </div>
