--- a/application/views/marketing/newsletterCreate.html
+++ b/application/views/marketing/newsletterCreate.html
@@ -4,7 +4,7 @@
         {if isset($success)}
         <div class="alert alert-success alert-dismissible fade in" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-            Newsletter Scheduled <strong>Successfully!</strong> click <a href="/admin/newsletterManage">here</a> for status
+            Newsletter Scheduled <strong>Successfully!</strong> click <a href="/marketing/newsletterManage">here</a> for status
         </div>
         {/if}
         <form class="row" method="post" action="">
