--- a/application/views/layouts/student.html
+++ b/application/views/layouts/student.html
@@ -110,6 +110,7 @@
                     <li><a href="/students/register" class="whitetext">Register</a></li>
                     <li><a href="/resume-for-internship" class="whitetext">Resume for Internship</a></li>
                     <li><a href="/onlinetest" class="whitetext">Online Test</a></li>
+                    <li><a href="/internship/details/Campus-Ambassador-of-SwiftIntern-/413" class="whitetext">Campus Ambassador</a></li>
                 </ul>
                 </nav>
             </div>
