Added PlacementBoat Link

--- a/application/views/layouts/student.html
+++ b/application/views/layouts/student.html
@@ -111,6 +111,7 @@
                     <li><a href="/resume-for-internship" class="whitetext">Resume for Internship</a></li>
                     <li><a href="/onlinetest" class="whitetext">Online Test</a></li>
                     <li><a href="/internship/details/Campus-Ambassador-of-SwiftIntern-/413" class="whitetext">Campus Ambassador</a></li>
+                    <li><a href="http://placementboat.org" class="whitetext" target="_blank">Interview Experiences</a></li>
                 </ul>
                 </nav>
             </div>
