--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -86,7 +86,6 @@
                 <ul class="list-unstyled list-social-icons">
                     <li><a href="/about" class="whitetext">About</a></li>
                     <li><a href="/blog" class="whitetext">Intern Blog</a></li>
-                    <li><a href="/termsofservice" class="whitetext">Terms of Use</a></li>
                     <li><a href="/privacy" class="whitetext">Privacy</a></li>
                     <li><a href="/contact" class="whitetext">Contact Us</a></li>
                 </ul>
@@ -100,6 +99,7 @@
                     <li><a href="/resume-for-internship" class="whitetext">Resume for Internship</a></li>
                     <li><a href="/onlinetest" class="whitetext">Online Test</a></li>
                     <li><a href="/internship/details/Campus-Ambassador-of-SwiftIntern-/413" class="whitetext">Campus Ambassador</a></li>
+                    <li><a href="http://placementboat.org" class="whitetext" target="_blank">Interview Experiences</a></li>
                 </ul>
                 </nav>
             </div>
@@ -110,6 +110,7 @@
                     <li><a href="/employer/register" class="whitetext">Register your Company</a></li>
                     <li><a href="/employer/about" class="whitetext">About/Benefits</a></li>
                     <li><a href="/organizations" class="whitetext">Companies</a></li>
+                    <li><a href="/termsofservice" class="whitetext">Terms of Service</a></li>
                 </ul>
                 </nav>
             </div>
