--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -75,6 +75,16 @@
             <img src="{echo CDN}images/clients.png" alt="clients" class="img-responsive">
         </div>
     </div>
+    
+    <footer class="footerAds hidden" id="footerads">
+      <div class="container">
+        <p class="text-muted">
+            Are you a Campus Hero? Apply for our campus ambassador program 
+            <a href="/internship/details/Campus-Ambassador-of-SwiftIntern-/413" class="btn btn-sm btn-success">Apply Now</a>
+            <button type="button" class="close"><span aria-hidden="true">×</span></button>
+        </p>
+      </div>
+    </footer>
 
     <!-- the footer -->
     <footer class="hidden-print">
