Added Contact Us Page

--- a/application/views/home/contact.html
+++ b/application/views/home/contact.html
@@ -50,9 +50,10 @@
             <legend>Visit Us</legend>
             <address>
                 SWIFTDEAL ONLINE LLP <br>
-                O - 54 F/F Batla House, Jamia Nagar,<br> 
-                New Delhi - 110025, Delhi, INDIA
+                406, Sant Nagar East of Kailash<br> 
+                New Delhi 110065 India
             </address>
+            <a href="https://www.google.co.in/maps/place/406,+St+Nagar,+East+of+Kailash,+New+Delhi,+Delhi+110065/@28.5542143,77.2512034,17z" target="_blank">Open in Google Maps</a>
         </div>
     </div>
 </div>
