Contact Page Whatsapp Share Updated

--- a/application/views/home/contact.html
+++ b/application/views/home/contact.html
@@ -36,13 +36,13 @@
                 <li class="tooltip-social facebook-link"><a href="https://www.facebook.com/swiftintern" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook-square fa-3x"></i></a></li>
                 <li class="tooltip-social linkedin-link"><a href="http://www.linkedin.com/company/swiftintern-com" data-toggle="tooltip" data-placement="top" title="LinkedIn"><i class="fa fa-linkedin-square fa-3x"></i></a></li>
                 <li class="tooltip-social twitter-link"><a href="https://twitter.com/swiftintern" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter-square fa-3x"></i></a></li>
-                <li class="tooltip-social google-plus-link"><a href="https://plus.google.com/+Swiftinternindia" data-toggle="tooltip" data-placement="top" title="Google+"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
-                <li class="tooltip-social rss-link"><a href="mailto:info@swiftintern.com" data-toggle="tooltip" data-placement="top" title="RSS"><i class="fa fa-envelope fa-3x"></i></a></li>
-                <li class="tooltip-social whatsapp-link"><a href="whatsapp://send" data-toggle="tooltip" data-placement="top" title="Whatsapp"><i class="fa fa-whatsapp fa-3x"></i></a></li>
+                <li class="tooltip-social google-plus-link"><a href="https://plus.google.com/+Swiftinternindia" title="Google+"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
+                <li class="tooltip-social rss-link"><a href="mailto:info@swiftintern.com" title="Email"><i class="fa fa-envelope fa-3x"></i></a></li>
+                <li class="tooltip-social whatsapp-link"><a href="whatsapp://send?text=http://swiftintern.com"" title="Whatsapp"><i class="fa fa-whatsapp fa-3x"></i></a></li>
             </ul>
-                           
-                    <p><i class="fa fa-envelope fa-lg"></i> info@swiftintern.com</p>
-                    <p><i class="fa fa-mobile fa-lg"></i> +91-9891048495</p>
+            
+            <p><i class="fa fa-envelope fa-lg"></i> info@swiftintern.com</p>
+            <p><i class="fa fa-mobile fa-lg"></i> +91-9891048495</p>
                 
                 
             
