Updated Student partner Link

--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -108,8 +108,7 @@
                     <li><a href="/student/register" class="whitetext">Register</a></li>
                     <li><a href="/resume-for-internship" class="whitetext">Resume for Internship</a></li>
                     <li><a href="/onlinetest" class="whitetext">Online Test</a></li>
-                    <li><a href="/internship/details/Campus-Ambassador-of-SwiftIntern-/413" class="whitetext">Campus Ambassador</a></li>
-                    <li><a href="http://placementboat.org" class="whitetext" target="_blank">Interview Experiences</a></li>
+                    <li><a href="/internship/details/Campus-Ambassador-of-SwiftIntern-/413" class="whitetext">Student Partner</a></li>
                 </ul>
                 </nav>
             </div>
@@ -130,7 +129,6 @@
                 <ul class="list-unstyled list-social-icons">
                     <li><i class="fa fa-facebook"></i><a href="https://facebook.com/swiftintern" class="whitetext" target="_blank"> Facebook</a></li>
                     <li><i class="fa fa-twitter"></i><a href="https://twitter.com/swiftintern" class="whitetext" target="_blank"> Twitter</a></li>
-                    <li><i class="fa fa-google-plus"></i><a href="https://plus.google.com/+Swiftinternindia" rel="publisher" class="whitetext" target="_blank"> Google+</a></li>
                     <li><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/company/swiftintern-com" class="whitetext" target="_blank"> LinkedIn</a></li>
                     <li><i class="fa fa-github-square"></i><a href="https://github.com/Swiftintern/Swiftintern/" class="whitetext" target="_blank"> Github</a></li>
                 </ul>
@@ -141,7 +139,7 @@
             <p>
                 <a href="https://github.com/SwiftMVC/SwiftMVC" target="_blank" class="whitetext btn btn-success btn-xs"><i class="fa fa-heart-o fa-fw"></i> Made with SwiftMVC</a>
                 <span class="pull-right">
-                    <a href="http://www.swiftdeal.org/" class="whitetext"><i class="fa fa-copyright fa-fw"></i> SwiftDeal Online LLP.</a>
+                    <a href="http://www.swiftdeal.org/" target="_blank" class="whitetext"><i class="fa fa-copyright fa-fw"></i> SwiftDeal Online LLP.</a>
                 </span>
             </p>
             <p class="text-center">
