--- a/application/views/layouts/student.html
+++ b/application/views/layouts/student.html
@@ -110,8 +110,7 @@
                     <li><a href="/students/register" class="whitetext">Register</a></li>
                     <li><a href="/resume-for-internship" class="whitetext">Resume for Internship</a></li>
                     <li><a href="/onlinetest" class="whitetext">Online Test</a></li>
-                    <li><a href="/internship/details/Campus-Ambassador-of-SwiftIntern-/413" class="whitetext">Campus Ambassador</a></li>
-                    <li><a href="http://placementboat.org" class="whitetext" target="_blank">Interview Experiences</a></li>
+                    <li><a href="/internship/details/Campus-Ambassador-of-SwiftIntern-/413" class="whitetext">Student Partner</a></li>
                 </ul>
                 </nav>
             </div>
@@ -144,7 +143,7 @@
             <p>
                 <button class="whitetext btn btn-success btn-xs" name="message" value=""><i class="fa fa-comments-o fa-fw"></i> Got a Question?</button>
                 <span class="pull-right">
-                    <a href="http://www.swiftdeal.org/" class="whitetext"><i class="fa fa-copyright fa-fw"></i> SwiftDeal Online LLP.</a>
+                    <a href="http://www.swiftdeal.org/"target="_blank" class="whitetext"><i class="fa fa-copyright fa-fw"></i> SwiftDeal Online LLP.</a>
                 </span>
             </p>
             <p class="text-center">
