--- a/application/views/training/index.html
+++ b/application/views/training/index.html
@@ -41,7 +41,6 @@
                             </div>
                         </div>
                         <aside class="col-xs-12 col-md-3">
-                            <a href="/employer/register" class="btn btn-warning btn-lg btn-block"><i class="fa fa-briefcase fa-lg"></i> Register Training Company</a><br>
 
                             <div class="panel panel-default">
                                 <table class="table">
@@ -51,7 +50,7 @@
                                             <td>100+</td>
                                         </tr>
                                         <tr>
-                                            <td>Participants</td>
+                                            <td>Scholars</td>
                                             <td>10,000+</td>
                                         </tr>
                                     </tbody>
