--- a/application/views/users/emails/employerApplicants.html
+++ b/application/views/users/emails/employerApplicants.html
@@ -3,7 +3,7 @@ Students Have Applied to Internship which you have Posted on Swiftintern.com, Yo
 We will notify them with Results. you can contact them also by viewing their profile through email or phone from <a href="http://swiftintern.com/employer/register">employer</a> dashboard.<br>
 <br>
 <ul>
-    <li>Internship : <a href="http://swiftintern.com/{echo Framework\StringMethods::url($opportunity->title)}/{$opportunity->id}"><b>{$opportunity->title}</b></a></li>
+    <li>Internship : <a href="http://swiftintern.com/{echo $opportunity->type}/details/{echo Framework\StringMethods::url($opportunity->title)}/{echo $opportunity->id}"><b>{$opportunity->title}</b></a></li>
     <li>New Applications : <b>{$applicants}</b></li>
 </ul>
 <br>
