--- a/application/views/users/emails/applicationInternship.html
+++ b/application/views/users/emails/applicationInternship.html
@@ -1,7 +1,7 @@
 <img src="http://assets.swiftintern.com/images/headerlogo.png" style="width:100%;"><br>
 Hi {$user->name},<br>
 <br>
-Your Application for <a href="http://swiftintern.com/opportunity/{$opportunity->id}">{$opportunity->title}</a> at <a href="http://swiftintern.com/organization/company/{$company->id}">{$company->name}</a> has been <b>Submitted Successfully</b>. you can view the Application from your profile <a href="http://swiftintern.com/students/applications">Application Link</a><br>
+Your Application for <a href="http://swiftintern.com/{$opportunity->type}/details/{echo Framework\StringMethods::url($opportunity->title)}/{$opportunity->id}">{$opportunity->title}</a> at <a href="http://swiftintern.com/organization/company/{$company->id}">{$company->name}</a> has been <b>Submitted Successfully</b>. you can view the Application from your profile <a href="http://swiftintern.com/students/applications">Application Link</a><br>
 <br>
 The Company will Contact you on or before {$last_date}, whether you are selected or not. if they dont contact within the dates specified you can call me or mesaage me, i will see to it.<br>
 <br>
