Added Question edit link

--- a/application/views/internship/edit.html
+++ b/application/views/internship/edit.html
@@ -8,6 +8,9 @@
                 Internship Updated <strong>Successfully!</strong>
             </div>
             {/if}
+            <p class="pull-right">
+                <a href="/internship/addQuestions/{$internship->id}" target="_blank" class="btn btn-primary"><i class="fa fa-plus-square fa-lg"></i> Add Questions?</a>
+            </p>
             <form class="panel panel-default text-center" method="post" action="">
                 <table class="table">
                     <tbody>
