--- a/application/views/internship/quick_apply.html
+++ b/application/views/internship/quick_apply.html
@@ -8,8 +8,8 @@
             <div class="modal-body">
                 {if(!isset($user))}
                 <p class="text-center">
-                    <button onclick=studentLogin("linkedin") class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Apply with Linkedin</button>
-                    <button onclick=studentLogin("google") class="btn btn-danger"><i class="fa fa-google fa-lg"></i>  | Apply with Google+</button>
+                    <button type="button" onclick=studentLogin("linkedin") class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Apply with Linkedin</button>
+                    <button type="button" onclick=studentLogin("google") class="btn btn-danger"><i class="fa fa-google fa-lg"></i>  | Apply with Google+</button>
                     <br><b>--- OR ---</b><br>
                 </p>
                 <div class="form-group">
